--- a/CSS/Basic_CSS_1.css
+++ b/CSS/Basic_CSS_1.css
@@ -82,3 +82,16 @@
   from {opacity: .4} 
   to {opacity: 1}
 }
+
+
+
+
+body {
+  opacity: 1;
+  transition: 1s opacity;
+}
+
+body.fade-out {
+  opacity: 0;
+  transition: none;
+}
